# TilePuzzle

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/: .gitignore  .project  settings.gradle.kts
android/app/: .project  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/enginedemo/: MainActivity.java
android/app/src/main/java/com/example/tilepuzzle/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
assets/scripts/: game.lua
